🚸 💄 elements spacing + fix UI dashboard

--- a/src/App.css
+++ b/src/App.css
@@ -229,6 +229,13 @@ body {
   padding: 0;
 }
 
+.accounts-wrapper {
+  padding-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
 .account {
   display: flex;
   justify-content: space-between;
@@ -241,7 +248,6 @@ body {
   padding: 1.5rem;
   box-sizing: border-box;
   text-align: left;
-  margin-bottom: 2rem;
 }
 
 .account-amount {
@@ -277,7 +283,7 @@ body {
 
 .header {
   color: #222;
-  margin-bottom: 2rem;
+  padding: 2rem 0;
 }
 
 .transaction-button {
